2004-07-05(Mon) 09:43:12 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix bug


2004-07-05(Mon) 08:31:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : ignore IOError when logging

	* plugins/googlebot.nb : add option ':googlec_maxwords'


2004-07-05(Mon) 08:02:43 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : auto detect filename encoding(carelessly)


2004-07-05(Mon) 07:28:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc, ndk_config.rb : add 'Mode' option and
	  Channel_Info[:initial_mode] option

	* nadokarc, ndk_config.rb : add 'FilenameEncoding' option

	* ndk_logger.rb, ndk_config.rb : support japanese character
	encoding channel name

	* ndk_config.rb : fix canonical_channel_name and add
	identical_channel_name

	* ndk_manager.rb : support "/nadoka reconnect" command

	* ndk_manager.rb : ping to server and check this response,
	due to check connection

	* ndk_manager.rb, ndk_state.rb : fix behavior when server
	connection is closed


2004-07-04(Sun) 17:50:06 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : synchronize file output


2004-07-04(Sun) 16:15:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix character code bugs


2004-07-03(Sat) 03:25:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : added

	* nadokarc : add default join channel '#nadoka_check'


2004-06-01(Tue) 16:51:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/checkbot.nb : added(incomplete)

	* plugins/rss_check.nb : change notice format

	* ndk_client.rb : fix login messages(commands)


2004-05-14(Fri) 02:36:04 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix part process at enter_away


2004-05-14(Fri) 02:27:06 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb(canonical_channel_name) : added
	and all configuration keys of channel information are canonical

	* ndk_state.rb(canonical_channel_name) : added
	and all state keys of channel are canonical

